# skebob-mc

./: .gitignore  README.md  compose.dev.yml  compose.prod.yml
backend/: Cargo.toml
backend/migrations/: 0_initial.sql  1_libreauth_user.sql  1_sessions.sql  2_whitelist.sql
backend/src/: auth.rs  commands.rs  core.rs  database.rs  error.rs  handlers.rs  invites.rs  main.rs  model.rs  profile.rs  queries.rs
backend/src/auth/: renewal.rs  signin.rs  signup.rs
backend/src/commands/: session.rs
backend/src/commands/session/: create.rs  refresh.rs
backend/src/core/: queries.rs
backend/src/core/commands/: invite.rs  session.rs  user.rs
backend/src/core/commands/invite/: create.rs  use.rs
backend/src/core/commands/session/: create.rs  detele.rs
backend/src/core/commands/user/: create.rs  plugin_create.rs
backend/src/core/queries/: invite.rs  session.rs  user.rs
backend/src/core/queries/invite/: avaliable.rs  info.rs  list.rs  remained.rs
backend/src/core/queries/invites/: remained.rs
backend/src/core/queries/session/: by_refresh.rs
backend/src/core/queries/user/: by_nickname.rs  by_token.rs  profile.rs
backend/src/handlers/: auth.rs  error.rs  invites.rs  profile.rs
backend/src/handlers/auth/: renewal.rs  signin.rs  signup.rs
backend/src/model/: dto.rs  invite.rs  invite_use.rs  session.rs  user.rs
backend/src/model/dto/: invite_info.rs  invite_with_usage.rs
backend/src/queries/: invites.rs  session.rs  user.rs
backend/src/queries/session/: by_refresh.rs
backend/src/queries/user/: by_nickname.rs  by_token.rs  is_exists.rs  profile.rs
(+64 files in other folders)
