[package]
name = "minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bcrypt = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "mysql"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread", "net", "macros"] }
